deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 443
        volumeMounts:
        - name: web-page-volume
          mountPath: /usr/share/nginx/html
          readOnly: true
        - name: tls-certs
          mountPath: "/etc/nginx/ssl"
          readOnly: true
      volumes:
      - name: web-page-volume
        configMap:
          name: my-website
      - name: tls-certs
        secret:
          secretName: tls-secret
